@@ -1,9 +1,19 @@
 package com.example.Learning_Course_App.service.Impl;
 
+import com.example.Learning_Course_App.dto.response.ContinueCourseResponse;
 import com.example.Learning_Course_App.dto.response.CourseDetailResponse;
+import com.example.Learning_Course_App.dto.response.CourseResponse;
+import com.example.Learning_Course_App.dto.response.LessonResponse;
+import com.example.Learning_Course_App.entity.Category;
 import com.example.Learning_Course_App.entity.Course;
+import com.example.Learning_Course_App.enumeration.LessonStatus;
+import com.example.Learning_Course_App.enumeration.Status;
+import com.example.Learning_Course_App.mapper.ContinueCourseMapper;
 import com.example.Learning_Course_App.mapper.CourseDetailMapper;
+import com.example.Learning_Course_App.mapper.CourseMapper;
+import com.example.Learning_Course_App.mapper.LessonMapper;
 import com.example.Learning_Course_App.repository.IBookMarkRepository;
+import com.example.Learning_Course_App.repository.ICategoryRepository;
 import com.example.Learning_Course_App.repository.ICourseRepository;
 import com.example.Learning_Course_App.service.ICourseService;
 import org.springframework.data.domain.Page;
@@ -12,7 +22,6 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
-import java.time.Duration;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -22,38 +31,49 @@ public class CourseServiceImpl implements ICourseService {
     private final CourseDetailMapper courseDetailMapper;
     private final IBookMarkRepository bookmarkRepository;
     private final RedisService redisService;
-    public CourseServiceImpl(ICourseRepository courseRepository, CourseDetailMapper courseDetailMapper, IBookMarkRepository bookmarkRepository, RedisService redisService) {
+    private final CourseMapper courseMapper;
+    private final  CourseDetailMapper courseDetailResponseMapper;
+    private final ContinueCourseMapper continueCourseMapper;
+    private final ICategoryRepository categoryRepository;
+
+    public CourseServiceImpl(ICourseRepository courseRepository, CourseDetailMapper courseDetailMapper, IBookMarkRepository bookmarkRepository, RedisService redisService, CourseMapper courseMapper, CourseDetailMapper courseDetailResponseMapper, ContinueCourseMapper continueCourseMapper, ICategoryRepository categoryRepository) {
         this.courseRepository = courseRepository;
         this.courseDetailMapper = courseDetailMapper;
         this.bookmarkRepository = bookmarkRepository;
         this.redisService = redisService;
+        this.courseMapper = courseMapper;
+        this.courseDetailResponseMapper = courseDetailResponseMapper;
+        this.continueCourseMapper = continueCourseMapper;
+        this.categoryRepository = categoryRepository;
     }
     @Override
-    public List<CourseDetailResponse> getCourseByCategory(Long categoryId) {
-//        return courseRepository.findByCategoryId(categoryId).stream()
-//                .map(courseDetailResponseMapper::toDto)
-//                .collect(Collectors.toList());
-        return null;
+    public Page<CourseResponse> getCourseByCategory(Long categoryId, int page, int size, Long userId) {
+        Pageable pageable = PageRequest.of(page, size);
+        Page<Course> listCourses = courseRepository.findByCategoryId(categoryId,pageable);
+        List<CourseResponse> coursesDTO = listCourses.getContent().stream()
+                .map(courseMapper::toDTO)
+                .toList();
+        List<CourseResponse> dto = markBookmarked(coursesDTO, userId);
+        return new PageImpl<>(dto, pageable, listCourses.getTotalElements());
     }
 
     @Override
-    public Page<CourseDetailResponse> getTop10BestSellingProducts(Long userId) {
+    public Page<CourseResponse> getTop10BestSellingProducts(Long userId) {
         redisService.delete("top10_course");
-
         // kiểm tra cache
-        List<CourseDetailResponse> cachedCourses = redisService.getList("top10_course", CourseDetailResponse.class);
+        List<CourseResponse> cachedCourses = redisService.getList("top10_course", CourseResponse.class);
         if (cachedCourses != null && !cachedCourses.isEmpty()) {
-            return paginateCourse(cachedCourses,1, 10); // nếu cached toàn bộ thì dùng hàm này
+            return paginateCourse(cachedCourses,0, 10); // nếu cached toàn bộ thì dùng hàm này
         }
 
         Pageable pageable = PageRequest.of(0, 10);
         Page<Course> topCourses = courseRepository.findTop10BestSellers(pageable);
 
         // map và đánh dấu bookmark
-        List<CourseDetailResponse> courseDTOs = topCourses.getContent().stream()
-                .map(courseDetailMapper::toDTO)
+        List<CourseResponse> courseDTOs = topCourses.getContent().stream()
+                .map(courseMapper::toDTO)
                 .collect(Collectors.toList());
-        List<CourseDetailResponse> dto = markBookmarked(courseDTOs, userId);
+        List<CourseResponse> dto = markBookmarked(courseDTOs, userId);
 
         redisService.saveList("top10_course", dto, 10);
 
@@ -61,30 +81,30 @@ public class CourseServiceImpl implements ICourseService {
         return new PageImpl<>(dto, pageable, topCourses.getTotalElements());
     }
 
-    private List<CourseDetailResponse> markBookmarked(List<CourseDetailResponse> courses, Long userId) {
+    private List<CourseResponse> markBookmarked(List<CourseResponse> courses, Long userId) {
         if (userId == null) {
             // Guest thì không cần đánh dấu bookmarked
-            for (CourseDetailResponse dto : courses) {
+            for (CourseResponse dto : courses) {
                 dto.setBookmarked(false); // hoặc không set cũng được
             }
             return courses;
         }
 
         List<Long> courseIds = courses.stream()
-                .map(CourseDetailResponse::getCourseId)
+                .map(CourseResponse::getCourseId)
                 .collect(Collectors.toList());
 
         List<Long> bookmarkedCourseIds = bookmarkRepository
                 .findBookmarkedCourseIdsByUserIdAndCourseIds(userId, courseIds);
 
-        for (CourseDetailResponse dto : courses) {
+        for (CourseResponse dto : courses) {
             dto.setBookmarked(bookmarkedCourseIds.contains(dto.getCourseId()));
         }
 
         return courses;
     }
 
-    private Page<CourseDetailResponse> paginateCourse(List<CourseDetailResponse> cachedCourses, int page, int size) {
+    private Page<CourseResponse> paginateCourse(List<CourseResponse> cachedCourses, int page, int size) {
         int start = page  * size;
         int end = Math.min(start + size, cachedCourses.size());
         return new PageImpl<>(cachedCourses.subList(start, end), PageRequest.of(page , size), cachedCourses.size());
@@ -102,18 +122,98 @@ public class CourseServiceImpl implements ICourseService {
     }
 
     @Override
-    public Page<CourseDetailResponse> getAllCourses(PageRequest of, Long userId) {
+    public Page<CourseResponse> getAllCourses(PageRequest of, Long userId) {
+        redisService.delete("all_course");
         // kiểm tra cache
-        List<CourseDetailResponse> cachedCourses = redisService.getList("all_course", CourseDetailResponse.class);
+        List<CourseResponse> cachedCourses = redisService.getList("all_course", CourseResponse.class);
         if (cachedCourses != null && !cachedCourses.isEmpty()) {
             return paginateCourse(cachedCourses, of.getPageNumber() , of.getPageSize());
         }
         Page<Course> coursePage = courseRepository.findAll(of);
-        List<CourseDetailResponse> courseDTOs = coursePage.getContent().stream()
-                .map(courseDetailMapper::toDTO)
+        List<CourseResponse> courseDTOs = coursePage.getContent().stream()
+                .map(courseMapper::toDTO)
                 .collect(Collectors.toList());
-        List<CourseDetailResponse> dto = markBookmarked(courseDTOs, userId);
+        List<CourseResponse> dto = markBookmarked(courseDTOs, userId);
         redisService.saveList("all_course", dto, 10);
         return new PageImpl<>(dto, of, coursePage.getTotalElements());
+    }
+
+    public  CourseDetailResponse getDetailCourse(Long courseId, Long userId) {
+        Course course = courseRepository.findById(courseId).orElse(null);
+        if (course == null) {
+            return null;
+        }
+        return courseDetailMapper.toDTO(course);
+    }
+
+    @Override
+    public ContinueCourseResponse getLatestContinueCourse(Long userId) {
+        Course latestCourse = courseRepository.findLastContinueCourse(
+                userId, Status.IN_PROGRESS, LessonStatus.UNLOCKED
+        );
+        if (latestCourse == null) {
+            return null;
+        }
+        int progressPercent = getCourseProgress(userId, latestCourse.getId(), Status.IN_PROGRESS);
+        String categoryNames = getCourseCategoryNames(latestCourse.getId());
+        return continueCourseMapper.toDTO(latestCourse, categoryNames, progressPercent);
+    }
+
+    @Override
+    public Page<ContinueCourseResponse> getAllContinueCourses(Long userId, PageRequest of) {
+        redisService.delete("continue_course_user:" + userId);
+        List<ContinueCourseResponse> cachedCourses = redisService.getList("continue_course_user:"+ userId, ContinueCourseResponse.class);
+        if (cachedCourses != null && !cachedCourses.isEmpty()) {
+            return paginateContinueCourse(cachedCourses, of.getPageNumber(), of.getPageSize());
+        }
+        Page<Course> coursePage = courseRepository.findContinueCoursesCommon(userId,Status.IN_PROGRESS, LessonStatus.UNLOCKED, of);
+        List<ContinueCourseResponse> courseDTOs = coursePage.getContent().stream()
+                .map(course -> {
+                    int progressPercent = getCourseProgress(userId, course.getId(), Status.IN_PROGRESS);
+                    String categoryNames = getCourseCategoryNames(course.getId());
+                    return continueCourseMapper.toDTO(course, categoryNames, progressPercent);
+                })
+                .toList();
+        redisService.saveList("continue_course_user:" + userId, courseDTOs, 10);
+        return new PageImpl<>(courseDTOs, of, coursePage.getTotalElements());
+    }
+
+    @Override
+    public Page<ContinueCourseResponse> getAllContinueCoursesCompleted(Long userId, PageRequest of) {
+        redisService.delete("completed_course_user:" + userId);
+        List<ContinueCourseResponse> cachedCourses = redisService.getList("completed_course_user:" + userId, ContinueCourseResponse.class);
+        if (cachedCourses != null && !cachedCourses.isEmpty()) {
+           return paginateContinueCourse(cachedCourses, of.getPageNumber(), of.getPageSize());
+        }
+        Page<Course> coursePage = courseRepository.findAllCompletedCourses(userId,Status.COMPLETED, of);
+        List<ContinueCourseResponse> courseDTOs = coursePage.getContent().stream()
+                .map(course -> {
+                    int progressPercent = getCourseProgress(userId, course.getId(), Status.COMPLETED);
+                    String categoryNames = getCourseCategoryNames(course.getId());
+                    return continueCourseMapper.toDTO(course, categoryNames, progressPercent);
+                })
+                .toList();
+        redisService.saveList("completed_course_user:"+ userId, courseDTOs, 10);
+        return new PageImpl<>(courseDTOs, of, coursePage.getTotalElements());
+    }
+
+    private int getCourseProgress(Long userId, Long courseId, Status status) {
+        if (status == Status.COMPLETED) {
+            return 100;
+        }
+        return courseRepository.getCourseProgressPercent(
+                courseId, userId, LessonStatus.UNLOCKED, status
+        );
+    }
+    private Page<ContinueCourseResponse> paginateContinueCourse(List<ContinueCourseResponse> cachedCourses, int page, int size) {
+        int start = page  * size;
+        int end = Math.min(start + size, cachedCourses.size());
+        return new PageImpl<>(cachedCourses.subList(start, end), PageRequest.of(page , size), cachedCourses.size());
+    }
+
+    private String getCourseCategoryNames(Long courseId) {
+        return categoryRepository.findCategoriesByCourseId(courseId).stream()
+                .map(Category::getCategoryName)
+                .collect(Collectors.joining(", "));
     }
 }
